--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,79 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+body {
+  height: 100%;
+  width: 100%;
   display: flex;
+  justify-content: center;
+}
+.todo-app {
+  width: 375px;
+  display: flex;
+  justify-content: center;
   flex-direction: column;
   align-items: center;
+}
+.header {
+  display: flex;
+  flex-direction: column;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  max-width: 100%;
 }
-
-.App-link {
-  color: #61dafb;
+.new-todo {
+  height: 50px;
+  width: 100%;
+  border: 0;
+  border-bottom: 1px solid #999;
+  outline: none;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+.todo-list {
+  width: 375px;
+}
+.todo {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border: 0;
+  border-bottom: 1px solid #999;
+  width: 100%;
+}
+#checkbox {
+  width: 30px;
+  height: 30px;
+  border: 0;
+}
+.todo p {
+  flex: 1;
+  margin-left: 5px;
+}
+.todo label {
+  border: 0.5px solid #999;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 30px;
+  width: 30px;
+  border-radius: 50%;
+  cursor: pointer;
+}
+.line-through {
+  text-decoration: line-through;
+}
+.footer {
+  width: 500px;
+  display: flex;
+  justify-content: space-around;
+  margin-top: 10px;
+}
+.footer button {
+  background-color: #fff;
+  border: 0;
+  cursor: pointer;
+}
+.footer button:hover {
+  border: 0.5px solid #999;
+}
+@media screen and (max-width: 376px) {
+  .todo-app .footer {
+    max-width: 370px;
   }
 }
